--- a/src/components/sitelayout/Topbar/TopbarPage.astro
+++ b/src/components/sitelayout/Topbar/TopbarPage.astro
@@ -10,19 +10,18 @@ import TopbarNav from "./TopbarNav.astro";
     position: fixed;
     left: 0;
     top: 0;
-    bottom: 0;
-    width: 300px;
+    height: 45px;
+    right: 0;
     background-color: lightblue;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    z-index: 10;
   }
   main {
-    position: relative;
-    left: 300px;
-    width: calc(100% - 300px);
     padding: 1rem;
+    padding-top: calc(1rem + 45px);
   }
 </style>
 <body>
