--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -6,22 +6,51 @@ const sidebarWidth = settings.sidebar.sidebarWidth;
 ---
 
 <style>
+  /*  */
   .menu-main {
-    display: flex;
-    flex-direction: row;
-    gap: 1rem;
   }
-  .menu-submenu {
-    position: absolute;
+  .menu-main-group {
+    position: fixed;
     top: 45px;
+    left: 0px;
+    right: 0px;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
     background-color: lightblue;
-    padding: 1rem;
   }
-  .submenu-hidden {
+  .menu-submenu {
+    display: flex;
+    flex-direction: column;
+    padding-left: 1rem;
+    font-size: 0.75rem;
+    gap: 0.25rem;
+  }
+  .menu-main button {
     display: none;
+  }
+
+  @media screen and (min-width: 600px) {
+    .menu-main button {
+      display: inline;
+    }
+    .menu-main-group {
+      display: flex;
+      flex-direction: row;
+      gap: 1rem;
+      position: static;
+    }
+    .menu-submenu {
+      position: absolute;
+      top: 45px;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      background-color: lightblue;
+      padding: 1rem;
+    }
+    .submenu-hidden {
+      display: none;
+    }
   }
 </style>
 <style is:global define:vars={{ sidebarWidth: sidebarWidth }}>
@@ -50,42 +79,40 @@ const sidebarWidth = settings.sidebar.sidebarWidth;
         ?.classList.toggle("submenu-hidden", !isInitiallyHidden);
     });
   });
-
-  document.querySelector(".menu-main")?.addEventListener("blurCapture", () => {
-    alert("blur");
-  });
 </script>
 <nav class="menu-main">
-  {
-    menuItems.map((item) => {
-      if (item.subItems.length > 0) {
-        return (
-          <>
-            <div class="dropdown-group">
-              <div>
-                <a href={item.url}>{item.title}</a>
-                <button
-                  class="menu-dropdown"
-                  data-menu-id={item.groupID}
-                  aria-controls={item.groupID}
-                >
-                  E
-                </button>
-              </div>
+  <div class="menu-main-group">
+    {
+      menuItems.map((item) => {
+        if (item.subItems.length > 0) {
+          return (
+            <>
+              <div class="dropdown-group">
+                <div>
+                  <a href={item.url}>{item.title}</a>
+                  <button
+                    class="menu-dropdown"
+                    data-menu-id={item.groupID}
+                    aria-controls={item.groupID}
+                  >
+                    E
+                  </button>
+                </div>
 
-              <div class="menu-submenu submenu-hidden" id={item.groupID}>
-                {item.subItems.map((subItem) => {
-                  return <a href={subItem.url}>{subItem.title}</a>;
-                })}
+                <div class="menu-submenu submenu-hidden" id={item.groupID}>
+                  {item.subItems.map((subItem) => {
+                    return <a href={subItem.url}>{subItem.title}</a>;
+                  })}
+                </div>
               </div>
-            </div>
-          </>
-        );
-      } else {
-        return <a href={item.url}>{item.title}</a>;
-      }
-    })
-  }
+            </>
+          );
+        } else {
+          return <a href={item.url}>{item.title}</a>;
+        }
+      })
+    }
+  </div>
 </nav>
 
 <!-- 
