--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -1,19 +1,18 @@
 ---
-import { getCollection, getEntry } from 'astro:content';
-import Layout from '../layouts/Layout.astro';
+import { getCollection, getEntry } from "astro:content";
+import Layout from "../layouts/Layout.astro";
 
 const { slug } = Astro.params;
-if (!slug) throw new Error('Slug not found');
-const page = await getEntry('pages', slug);
+if (!slug) throw new Error("Slug not found");
+const page = await getEntry("pages", slug);
 
-if (!page) throw new Error('No page found for this slug');
+if (!page) throw new Error("No page found for this slug");
 const { Content } = await page.render();
 // console.log(page);
-
 // Generate static pages
 export async function getStaticPaths() {
-  const posts = await getCollection('pages');
-  return posts.map(post => ({ params: { slug: post.slug } }));
+  const posts = await getCollection("pages");
+  return posts.map((post) => ({ params: { slug: post.slug } }));
 }
 ---
 
