--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -1,18 +1,18 @@
 ---
-import { getCollection, getEntry } from 'astro:content';
-import Layout from '../../layouts/Layout.astro';
+import { getCollection, getEntry } from "astro:content";
+import Layout from "../../layouts/Layout.astro";
 const { slug } = Astro.params;
-if (!slug) throw new Error('Slug not found');
-const post = await getEntry('projects', slug);
+if (!slug) throw new Error("Slug not found");
+const post = await getEntry("projects", slug);
 
-if (!post) throw new Error('No post found for this slug');
+if (!post) throw new Error("No post found for this slug");
 const { Content } = await post.render();
 // console.log(post);
-
+console.log("title:" + post.data.title);
 // Generate static pages
 export async function getStaticPaths() {
-  const posts = await getCollection('projects');
-  return posts.map(post => ({ params: { slug: post.slug } }));
+  const posts = await getCollection("projects");
+  return posts.map((post) => ({ params: { slug: post.slug } }));
 }
 ---
 
