--- a/src/components/portfolioViews/sideBySide/SBSItem.astro
+++ b/src/components/portfolioViews/sideBySide/SBSItem.astro
@@ -35,6 +35,8 @@ const isOdd = index % 2;
     /* height: 100%; */
     aspect-ratio: 3/ 2;
     object-fit: cover;
+    height: 100%;
+    position: relative;
   }
 
   .sbs-text-panel {
@@ -51,7 +53,7 @@ const isOdd = index % 2;
   <div class:list={["sbs-image-container"]}>
     {
       thumbnail ? (
-        <Image widths={[400]} class={"sbs-image"} src={thumbnail} alt="" />
+        <Image widths={[700]} class={"sbs-image"} src={thumbnail} alt="" />
       ) : (
         <div class="sbs-image" style={{ backgroundColor: accent }} />
       )
