implements hover overlay effect

--- a/src/components/portfolioViews/tile/TileContainer.astro
+++ b/src/components/portfolioViews/tile/TileContainer.astro
@@ -1,9 +1,14 @@
 ---
-const {props}=Astro
-
+const { props } = Astro;
 ---
 
-<div>
-  TILE CONTAINER
+<style>
+  .tile-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  }
+</style>
+
+<div id={props.containerId} class="tile-container" style={{ maxWidth: "100%" }}>
   <slot />
 </div>
