starts moving over to JSON data files instead of yaml

--- a/src/components/portfolioViews/tile/TileItem.astro
+++ b/src/components/portfolioViews/tile/TileItem.astro
@@ -15,12 +15,11 @@ const { title, url, thumbnail, accent } = Astro.props;
   }
   .tile-image {
     /* position: ; */
-
     object-fit: cover;
     height: auto;
     width: 100%;
     height: 100%;
-    aspect-ratio: 4/3;
+    aspect-ratio: 1.25;
     position: relative;
     top: 0;
     bottom: 0;
