--- a/src/components/sitelayout/LayoutSwitcher.astro
+++ b/src/components/sitelayout/LayoutSwitcher.astro
@@ -1,31 +1,26 @@
 ---
-import settings from "../helpers/settingsHelper";
+import settings from "../../settings/menu.json";
 
 // import templates
 import SidebarPage from "./Sidebar/SidebarPage.astro";
 import TopbarPage from "./Topbar/TopbarPage.astro";
 
-console.log(settings.menu.position);
+console.log(settings.position);
 // const MenuComponent = Sidebar;
 let PageLayout;
-let pageLayoutName;
-switch (settings.menu.position) {
+switch (settings.position) {
   case "sidebar":
     PageLayout = SidebarPage;
-    pageLayoutName = "si";
     break;
   case "top":
     console.log("using topbar");
     PageLayout = TopbarPage;
-    pageLayoutName = "top!";
     break;
   default:
     PageLayout = SidebarPage;
-    pageLayoutName = "si";
 
     break;
 }
-console.log(PageLayout);
 ---
 
 <PageLayout>
