--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -1,8 +1,8 @@
 ---
+import type { string } from "astro/zod";
 import menuItems from "../../helpers/menuItems";
 
 import settings from "../../helpers/settingsHelper";
-const sidebarWidth = settings.sidebar.sidebarWidth;
 ---
 
 <style>
@@ -53,21 +53,13 @@ const sidebarWidth = settings.sidebar.sidebarWidth;
     }
   }
 </style>
-<style is:global define:vars={{ sidebarWidth: sidebarWidth }}>
-  .header-for-sidebar {
-    /* width:var(--sidebarWidth); */
-    /* background-color: yellow; */
-  }
-  .body-for-sidebar {
-    display: flex;
-  }
-</style>
+
 <script>
   const buttons = document.querySelectorAll(".menu-dropdown");
   // alert(buttons.length);
   buttons.forEach((item) => {
     item.addEventListener("click", () => {
-      const menuID = item.getAttribute("data-menu-id");
+      const menuID = item.getAttribute("data-menu-id") || "";
       const isInitiallyHidden = document
         .getElementById(menuID)
         ?.classList.contains("submenu-hidden");
@@ -100,7 +92,7 @@ const sidebarWidth = settings.sidebar.sidebarWidth;
                 </div>
 
                 <div class="menu-submenu submenu-hidden" id={item.groupID}>
-                  {item.subItems.map((subItem) => {
+                  {item.subItems.map((subItem:{url:string,title:string}) => {
                     return <a href={subItem.url}>{subItem.title}</a>;
                   })}
                 </div>
