wip trying to set up my own markdoc rendering

--- a/src/pages/test.astro
+++ b/src/pages/test.astro
@@ -1,4 +1,20 @@
 ---
-
+import { createReader } from "@keystatic/core/reader";
+import keystaticConfig from "../../keystatic.config";
+import { Markdoc } from "@astrojs/markdoc/config";
+const reader = createReader(process.cwd(), keystaticConfig);
+const page = await reader.collections.projects.read(
+  "you-wouldn-t-download-a-hedgehog"
+);
+// console.log(page);
+let rendered;
+const pageContent = await page?.content();
+// console.log(pageContent?.node.children);
+if (typeof pageContent?.node !== "undefined") {
+  const transformed = Markdoc.transform(pageContent?.node);
+  rendered = Markdoc.renderers.html(transformed);
+}
 ---
+
 <h1>Test Page</h1>
+<Fragment set:html={rendered} />
