--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -3,6 +3,7 @@ import type { string } from "astro/zod";
 import menuItems from "../../helpers/menuItems";
 
 import settings from "../../helpers/settingsHelper";
+const menuItemCount=menuItems.length;
 ---
 
 <style>
@@ -48,7 +49,11 @@ justify-content: flex-end;  }
     .menu-mobile-hidden{
       display: flex;
     }
-    .menu-main button {
+    #menu-toggle{
+      display: none;
+    }
+    .menu-main button 
+    {
       display: inline;
     }
     .menu-main-group {
@@ -57,23 +62,46 @@ justify-content: flex-end;  }
       gap: 1rem;
       position: static;
     }
+    .menu-main{
+      justify-content: center;
+      position: relative;
+      z-index: 100;
+    }
     .menu-submenu {
+
       position: absolute;
+ 
       top: 45px;
-      display: flex;
+      display: inline-flex;
       flex-direction: column;
       gap: 1rem;
       background-color: lightblue;
-      padding: 1rem;
+      padding: .5rem;
+      transition: all .2s;
+      z-index: -10;
+    }
+    .menu-submenu a{
+      width:max-content;
+    }
+    .dropdown-group{
+      position: relative;
+    }
+    .dropdown-group-right .menu-submenu{
+      right:0;
+
     }
     .submenu-hidden {
-      display: none;
+      /* transform:translateY(-50px); */
+      height: 0px;
+      opacity:0;
+      pointer-events: none;
+      transition:all .2s;
     }
   }
 </style>
 
 <script>
-  const buttons = document.querySelectorAll(".menu-dropdown");
+  const buttons = document.querySelectorAll(".menu-dropdown-button");
   // alert(buttons.length);
   buttons.forEach((item) => {
     item.addEventListener("click", () => {
@@ -82,6 +110,7 @@ justify-content: flex-end;  }
         .getElementById(menuID)
         ?.classList.contains("submenu-hidden");
       document.querySelectorAll(".menu-submenu").forEach((submenu) => {
+        console.log(submenu);
         submenu.classList.toggle("submenu-hidden", true);
       });
       document
@@ -101,11 +130,13 @@ document.querySelector('#menu-toggle').addEventListener('click',()=>{
 
 <div class="menu-main-group menu-mobile-hidden">
     {
-      menuItems.map((item) => {
+      
+      menuItems.map((item,index) => {
+        const isRightSide= ((index*2)> menuItemCount);
         if (item.subItems.length > 0) {
           return (
             <>
-              <div class="dropdown-group">
+              <div class:list={["dropdown-group",isRightSide&&'dropdown-group-right']}>
                 <div>
                   <a href={item.url}>{item.title}</a>
                   <button
