--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -123,7 +123,7 @@ justify-content: flex-end;  }
   });
 
 
-document.querySelector('#menu-toggle').addEventListener('click',()=>{
+document.querySelector('#menu-toggle')?.addEventListener('click',()=>{
   document.querySelector('.menu-main-group')?.classList.toggle('menu-mobile-hidden')
 })
 
