trying to figure out dynamic image import

--- a/src/components/portfolioViews/sideBySide/SBSItem.astro
+++ b/src/components/portfolioViews/sideBySide/SBSItem.astro
@@ -14,7 +14,7 @@ import portfolioLayouts from "../../../settings/portfolioLayouts.json";
     display: flex;
     flex-wrap: wrap;
     /* controlled padding */
-    border: 2px solid red;
+    /* border: 2px solid red; */
   }
   .sbs-item-odd {
     flex-direction: row-reverse;
