--- a/src/components/pagebuilder/HeroSection.astro
+++ b/src/components/pagebuilder/HeroSection.astro
@@ -31,10 +31,11 @@ console.log(fancyImage);
   }
   .hero-section-container {
     height: 300px;
+    width: 100%;
     position: relative;
     display: flex;
     padding: 2rem;
-    background-size: cover;
+    background-size: 100% auto;
     background-attachment: fixed;
   }
   .hero-section-content-panel {
