updates image optimization for tiles

--- a/src/components/portfolioViews/coolTile/CoolTileContainer.astro
+++ b/src/components/portfolioViews/coolTile/CoolTileContainer.astro
@@ -6,7 +6,7 @@ const tileSettings = settings.portfolioLayouts.coolTile;
 
 <style
   define:vars={{
-    tileWidth: tileSettings.targetWidth,
+    tileWidth: tileSettings.targetWidth + "px",
     tileGap: tileSettings.itemGap,
   }}
 >
