--- a/src/components/portfolioViews/coolTile/CoolTileItem.astro
+++ b/src/components/portfolioViews/coolTile/CoolTileItem.astro
@@ -5,9 +5,16 @@ const { title, url, thumbnail, accent } = Astro.props;
 import { settings } from "../../helpers/settingsHelper";
 const tileSettings = settings.portfolioLayouts.coolTile;
 
+const imageProps = await getImage({
+  src: thumbnail,
+});
+console.log(imageProps);
+const srcRatio = imageProps.attributes.width / imageProps.attributes.height;
+const neededWidth = srcRatio * tileSettings.targetWidth * 2;
+
 const fancyImage = await getImage({
   src: thumbnail,
-  width: tileSettings.targetWidth,
+  width: neededWidth,
 });
 ---
 
@@ -17,6 +24,7 @@ const fancyImage = await getImage({
     position: relative;
     overflow: hidden;
     background-size: cover;
+    transition: background 0.5s linear;
   }
 
   .tile-hover-panel {
