condensing page layout stuff into Layout.astro

--- a/src/components/portfolioViews/coolTile/CoolTileItem.astro
+++ b/src/components/portfolioViews/coolTile/CoolTileItem.astro
@@ -10,7 +10,7 @@ const imageProps = await getImage({
 });
 console.log(imageProps);
 const srcRatio = imageProps.attributes.width / imageProps.attributes.height;
-const neededWidth = srcRatio * tileSettings.targetWidth * 2;
+const neededWidth = srcRatio * tileSettings.minTileWidth * 2;
 
 const fancyImage = await getImage({
   src: thumbnail,
