continues to refine layout stuff

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,7 +44,7 @@ import { settings } from "../components/helpers/settingsHelper";
       ul,
       ol {
         margin-bottom: 1rem;
-        color: #1d1d1d;
+        /* color: red; */
       }
 
       img {
