--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,7 @@ import { settings } from "../components/helpers/settingsHelper";
     <title>{title}</title>
 
     <ViewTransitions />
+
     <style
       is:global
       define:vars={{
@@ -43,8 +44,8 @@ import { settings } from "../components/helpers/settingsHelper";
       p,
       ul,
       ol {
-        margin-bottom: 1rem;
-        /* color: red; */
+        margin-bottom: 1em;
+        margin-top: 1em;
       }
 
       img {
@@ -55,6 +56,7 @@ import { settings } from "../components/helpers/settingsHelper";
       * {
         padding: 0;
         margin: 0;
+
         box-sizing: border-box;
       }
       main {
@@ -63,9 +65,9 @@ import { settings } from "../components/helpers/settingsHelper";
       main > * {
         display: block;
         width: 100%;
-        margin: 0 auto;
+        margin-left: auto;
+        margin-right: auto;
         max-width: var(--maxPageContentWidth);
-
         overflow-wrap: break-word;
       }
     </style></head
