moves edit button so it doesn't impact layout

--- a/src/components/sitelayout/FloatingEdit.astro
+++ b/src/components/sitelayout/FloatingEdit.astro
@@ -20,11 +20,15 @@ if (isHomepage) {
 <style>
   .floating-edit {
     font-size: 0.75rem;
+    position: relative;
+    height: 0;
+    top: 1rem;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: right;
   }
+
   .floating-edit a {
-    /* padding: 0.5rem;
-    background-color: lightpink;
-    text-decoration: none; */
   }
 </style>
 {
