--- a/src/components/sitelayout/Topbar/TopbarPage.astro
+++ b/src/components/sitelayout/Topbar/TopbarPage.astro
@@ -19,6 +19,9 @@ import TopbarNav from "./TopbarNav.astro";
     justify-content: center;
     z-index: 10;
   }
+  main {
+    padding-top: 45px;
+  }
 </style>
 <body>
   <header>
