--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -61,6 +61,7 @@ import { settings } from "../components/helpers/settingsHelper";
       }
       main {
         align-items: center;
+        position: relative;
       }
       main > * {
         display: block;
